objects/Case_Team_Assignment__mdt.object
<CustomObject>
    <description>Assigning Case teams based on Assigned to value of cases only for IOFO cases</description>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team_Value__c</fullName>
        <label>Case Team Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team__c</fullName>
        <label>Case Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group_Name__c</fullName>
        <label>Public Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Team Assignment</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Case_Team__c</columns>
        <columns>Case_Team_Value__c</columns>
        <columns>Profile__c</columns>
        <columns>Public_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Case Team Assignments</pluralLabel>
</CustomObject>